--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
  
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 30, 45%, 96%;
     --foreground: 20 14.3% 4.1%;
 
     --card: 0 0% 100%;
@@ -32,7 +32,7 @@
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
  
-    --radius: 0.5rem;
+    --radius: 0.8rem;
   }
  
   .dark {
